fix icon truncation

--- a/assets/stylesheets/_screen.scss
+++ b/assets/stylesheets/_screen.scss
@@ -424,7 +424,7 @@ article {
                 width: 16px;
                 height: 16px;
                 background-repeat: no-repeat;
-                background-size: 16px;
+                background-size: contain;
                 display: block;
                 margin-right: 1em;
                 float: right;
